# gamecompendium

./: .gitignore  README.md  config.example.toml  main.benchmark  pyproject.toml
gamecompendium/: aggregator.py  analyzers.py  app.py  async_utils.py  benchmark.py  config.py  igdb.py  main.py  rate_limiter.py  resolver.py  source.py  steam.py  whoosh_bugs.py
gamecompendium-main/: config.example.toml
gamecompendium-main/gamecompendium/steam_index/: steam_6aikczw4vvaizmdz.seg
gamecompendium/gamecompendium/: main.py
slides/: evaluation.ods
slides/anim/: .gitignore  convert_to_gif.sh  main.py  pyproject.toml  topk.py
