[tool.poetry]
name = "gamecompendium"
version = "0.1.0"
description = ""
authors = ["Zelioli Vittorio <vittoriozelioli@gmail.com>", "Rossi Lorenzo <snowycoder@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Whoosh = "^2.7.4"
requests = "^2.26.0"
aiohttp = "^3.8.1"
toml = "^0.10.2"
tqdm = "^4.62.3"
dateparser = "^1.1.0"
uuid = "^1.30"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
