[tool.poetry]
name = "anim"
version = "0.1.0"
description = ""
authors = ["Rossi Lorenzo <snowycoder@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.9"
manim = "^0.14.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
